[package]
name = "wring-twistree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.3"
num-prime = "0.4.3"
num-traits = "0.2.16"
num-integer = "0.1.44"
mod_exp = "1.0.1"
clap = { version = "3.2.25", features = ["derive"] }
lazy_static = "1.4.0"

[profile.dev]
overflow-checks = false
